- clients change only their own backlight/mkey led status
1.2.1 06/08/2006
- Fix bug which could cause client screens to be lost under certain circumstances.
1.2.2 28/10/2006
- Vastly improve latency issues when using 'G' keys
- Documentation updates
- includes xkb patch for xorg 7.1 for native g15 keyboard layout in X11 (contrib directory)
1.2.3 30/10/2006
- improved the Xmodmaprc configuration, it now has parity with the xkb version
1.2.4 01/11/2006
- Users can now choose to use the L1 key to switch between client screens instead of MR. 
  - L1 is the small round black button directly below the LCD.
  - Use -s on the commandline to activate the change.
1.2.4svn -> current
- Add ability for clients to request all M and G keypresses be 'pushed' to them,
  rather than having to request them repeatedly.  If a client uses this
  option, no keyboard processing is done by the daemon, and the client must
  be prepared to do uinput processing itself, if necessary.  This limitation
  may be removed in future versions of the API.  Normal processing will
  resume when the client that requested this feature exits or closes its
  connection.
- Add manpage for the daemon.
- Fix automake bug that caused documentation not to be installed by default.
- Fix the daemons cmdline processing to handle more than one commandline option.
- Refactored the code slightly to allow for easier modification in the future.
- Handle long commandline arguments such as --help --version --kill --switch.
- Greatly improve error reporting.
- Add client development documentation (man g15daemon_client_devel / README.client_devel)
- Added a 'debug' mode (-d or --debug) cmdline switch to keep the daemon in the foreground
  rather than daemonising.  All errors and other info will be reported to STDERR in this mode.
- If compiled with libg15 1.1.0 or greater (or svn versions later than 3/11/06), the daemon 
  will now reset the keyboard to defaults on exit.
- make distcheck && make dist now work as expected.